--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "@types/jest": "^27.0.1",
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
+    "@types/react-alice-carousel": "^1.15.3",
     "@types/react-dom": "^18.0.0",
     "@types/react-responsive": "^8.0.8",
     "@types/styled-components": "^5.1.34",
     "gh-pages": "^6.1.1",
     "react": "^18.2.0",
+    "react-alice-carousel": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-responsive": "^9.0.2",
     "react-scripts": "5.0.1",
